# fmp-ai

./: .env.example  app.py  cli.py  pyproject.toml
core/: adapters.py  ai.py  config.py  judge.py  repository.py
